--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@
   src: url('./fonts/AirbnbCerealBook.ttf');
 }
 
-
+/* fonts */
 
 .paragraphs {
   font-family: 'Cereal Medium';
@@ -47,4 +47,49 @@
 
 .user {
   font-family: 'Cereal Bold';
+}
+
+.rating {
+  font-family: 'Cereal Book';
+}
+
+.container {
+  display: flex;
+  margin-right: 30%;
+  margin-left: 30%;
+}
+
+.flex-container {
+  /* We first create a flex layout context */
+  display: flex;
+  flex-flow: column wrap;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+
+}
+
+.flex-item {
+  flex: auto;
+  padding: 5px;
+  height: 150px;
+  margin-top: 10px;
+  line-height: 150px;
+  width: 50%;
+}
+
+.flex-container-post {
+  /* We first create a flex layout context */
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0;
+  margin: 0;
+}
+
+.flex-post {
+  border: 3px solid black;
+  width: 48%;
+  padding-left: 2px;
+  margin-bottom: 2px;
+  margin-left: 2px;
 }
