--- a/public/style.css
+++ b/public/style.css
@@ -55,8 +55,8 @@
 
 .container {
   display: flex;
-  margin-right: 30%;
-  margin-left: 30%;
+  margin-right: 20%;
+  margin-left: 20%;
 }
 
 .flex-container {
@@ -82,14 +82,21 @@
   /* We first create a flex layout context */
   display: flex;
   flex-flow: row wrap;
-  padding: 0;
+  padding: 5px;
   margin: 0;
+  border-radius: 15px;
+  border: 2px solid rgb(177, 176, 176);
+  margin-bottom: 5px;
+  margin-top: 10px;
+
 }
 
 .flex-post {
-  border: 3px solid black;
   width: 48%;
-  padding-left: 2px;
-  margin-bottom: 2px;
+  padding-left: 4px;
+  margin-bottom: 4px;
   margin-left: 2px;
+  padding-top: 5px;
+  padding: 6px;
+
 }
