--- a/public/style.css
+++ b/public/style.css
@@ -100,3 +100,38 @@
   padding: 6px;
 
 }
+
+.flex-container-reviews {
+  display: block;
+  overflow: auto;
+  max-height: 400px;
+  margin-bottom: 5px;
+  margin-top: 20px;
+  border: solid rgb(177, 176, 176);
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.button {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  width: auto !important;
+  touch-action: manipulation !important;
+  font-family: 'Cereal Bold' !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  border-radius: 10px !important;
+  padding: 10px 20px !important;
+  border: solid rgb(177, 176, 176) !important;
+  background: rgb(255, 255, 255);
+  color: rgb(34, 34, 34) !important;
+  transition: .3s;
+}
+
+.button:hover {
+  background:rgb(214, 213, 213)
+}
