--- a/public/style.css
+++ b/public/style.css
@@ -36,39 +36,38 @@
 }
 
 /* fonts */
-
 .paragraphs {
   font-family: 'Cereal Medium';
 }
-
 .date {
   font-family: 'Cereal Light';
 }
-
 .user {
   font-family: 'Cereal Bold';
 }
-
 .rating {
   font-family: 'Cereal Book';
 }
 
+/* Overall Container for page */
 .container {
   display: flex;
   margin-right: 20%;
   margin-left: 20%;
 }
 
+/* first flex container for Ratings */
 .flex-container {
-  /* We first create a flex layout context */
   display: flex;
   flex-flow: column wrap;
   width: 100%;
   padding: 0;
   margin: 0;
-
 }
-
+.mostrecentreviews {
+  margin-bottom: 10px;
+  font-family: 'Cereal Bold';
+}
 .flex-item {
   flex: auto;
   padding: 5px;
@@ -78,19 +77,19 @@
   width: 50%;
 }
 
+/* Container for reviews on main page */
 .flex-container-post {
-  /* We first create a flex layout context */
   display: flex;
   flex-flow: row wrap;
   padding: 5px;
   margin: 0;
   border-radius: 15px;
-  border: 2px solid rgb(177, 176, 176);
-  margin-bottom: 5px;
+  border: 2px solid rgb(129, 129, 129);
+  margin-bottom: 10px;
   margin-top: 10px;
-
 }
 
+/* properties for each review */
 .flex-post {
   width: 48%;
   padding-left: 4px;
@@ -98,20 +97,21 @@
   margin-left: 2px;
   padding-top: 5px;
   padding: 6px;
-
 }
 
+/* Modal reviews container */
 .flex-container-reviews {
   display: block;
   overflow: auto;
   max-height: 400px;
   margin-bottom: 5px;
   margin-top: 20px;
-  border: solid rgb(177, 176, 176);
+  border: solid rgb(129, 129, 129);
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
 
+/* Properties for each button */
 .button {
   cursor: pointer !important;
   display: inline-block !important;
@@ -126,12 +126,55 @@
   line-height: 20px !important;
   border-radius: 10px !important;
   padding: 10px 20px !important;
-  border: solid rgb(177, 176, 176) !important;
+  border: solid rgb(129, 129, 129) !important;
   background: rgb(255, 255, 255);
   color: rgb(34, 34, 34) !important;
   transition: .3s;
 }
-
 .button:hover {
-  background:rgb(214, 213, 213)
+  background:rgb(146, 219, 201)
+}
+.button:focus {
+  outline: none;
+}
+
+/* Add Reviews Modal */
+.addReview-form {
+  display: flex;
+  flex-flow: column wrap;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.addReview-post {
+  resize: none;
+  width: 400px;
+  height: 200px;
+  border: solid rgb(129, 129, 129);
+  border-radius: 15px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-family: 'Cereal Medium';
+  outline: none;
+
+}
+.rating-box {
+  max-width: 30px;
+  border: solid rgb(129, 129, 129);
+  font-family: 'Cereal Medium';
+  border-radius: 4px;
+  outline: none;
+}
+.date-box {
+  max-width: 150px;
+  border-radius: 4px;
+  font-family: 'Cereal Medium';
+  border: solid rgb(129, 129, 129);
+}
+.name-box {
+  border-radius: 4px;
+  font-family: 'Cereal Medium';
+  border: solid rgb(129, 129, 129);
 }
